--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 99_work/
-04_compareTable/excel/
-04_compareTable/lib/
-04_compareTable/log/
+tool/04_compareTable/excel/
+tool/04_compareTable/lib/
+tool/04_compareTable/log/
